--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -161,14 +161,6 @@
                                 <option value="{{ contact.id }}" {% if role.owner_id == contact.id %}selected{% endif %}>{{ contact.Name }}</option>
                                 {% endfor %}
                             </select>
-                            {% endif %}
-                        </td>
-                        <td class="button-cell">
-                            {% if is_admin_view %}
-                                <div class="button-group">
-                                    <button class="icon-btn" title="Unassign Role" onclick="assignRole('{{ role.session_id }}', '0')"><i class="fas fa-undo"></i></button>
-                                    {% if role.waitlist %}<button class="icon-btn btn-approve-waitlist" title="Approve top of waitlist" onclick="approveWaitlist('{{ role.session_id }}', '{{ role.role_key }}')"><i class="fas fa-user-check"></i></button>{% endif %}
-                                </div>
                             {% elif user_role != 'Guest' %}
                                 {% if role.owner_id %}
                                     {% if role.owner_id == current_user_contact_id %}
@@ -191,6 +183,15 @@
                                 {% endif %}
                             {% endif %}
                         </td>
+                        {% if is_admin_view %}
+                        <td class="icon-cell">
+                            
+                                <div class="button-group">
+                                    <button class="icon-btn" title="Unassign Role" onclick="assignRole('{{ role.session_id }}', '0')"><i class="fas fa-undo"></i></button>
+                                    {% if role.waitlist %}<button class="icon-btn btn-approve-waitlist" title="Approve top of waitlist" onclick="approveWaitlist('{{ role.session_id }}', '{{ role.role_key }}')"><i class="fas fa-user-check"></i></button>{% endif %}
+                                </div>
+                        </td>
+                        {% endif %}
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -221,7 +222,7 @@
                         <td class="assign-cell">
                             <div class="owner-display">{{ role.owner_name or 'Unassigned' }}</div>
                         </td>
-                        <td class="button-cell">
+                        <td class="icon-cell">
                             {% if role.owner_id and role.award_category and (role.award_category_open or role.award_type) %}
                                 <button type="button" class="icon-btn {% if role.award_type %}icon-btn-voted{% endif %}" title="Vote" onclick="handleVoteClick(this)" data-meeting-number="{{ selected_meeting_number }}" data-contact-id="{{ role.owner_id }}" data-award-category="{{ role.award_category }}">
                                     <i class="fas fa-vote-yea"></i>
@@ -258,7 +259,7 @@
                         <td class="assign-cell">
                             <div class="owner-display">{{ role.owner_name or 'Unassigned' }}</div>
                         </td>
-                        <td class="button-cell">
+                        <td class="icon-cell">
                         {% if is_admin_view  %}
                             {% if role.owner_id and role.award_category %}
                                 <button type="button" class="icon-btn {% if role.award_type %}icon-btn-voted{% endif %}" title="Vote" onclick="handleVoteClick(this)" data-meeting-number="{{ selected_meeting_number }}" data-contact-id="{{ role.owner_id }}" data-award-category="{{ role.award_category }}">
