fix: rename the fields in data model

--- a/app/templates/_speech_log_modal.html
+++ b/app/templates/_speech_log_modal.html
@@ -11,7 +11,7 @@
                         <select id="project_id" name="project_id">
                             <option value="">-- Select a Project --</option>
                             {% for p in projects %}
-                                <option value="{{ p.ID }}">{{ p.Project_Name }}</option>
+                                <option value="{{ p.id }}">{{ p.Project_Name }}</option>
                             {% endfor %}
                         </select>
                     </td>
