--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -93,6 +93,11 @@
             </select>
         </div>
         <div class="filter-right">
+            {% if is_admin_view %}
+            <button class="btn btn-primary" onclick="syncTally()" style="margin-right: 10px;">
+                <i class="fas fa-sync"></i> Sync to Tally
+            </button>
+            {% endif %}
             <a href="{{ url_for('static', filename='files/club-meeting-roles-resource-library.pdf') }}" target="_blank" class="btn btn-info role-guide-link">
                 <i class="fas fa-book-open"></i> View Role Guide
             </a>
