--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,6 +61,10 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='vendor/css/fontawesome.min.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/christmas_theme.css') }}"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="{{ url_for('static', filename='vendor/css/fonts.css') }}"
