--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -202,6 +202,12 @@
       </div>
     </div>
 
+    <div class="snow-container" aria-hidden="true">
+      {% for i in range(50) %}
+      <div class="snow"></div>
+      {% endfor %}
+    </div>
+
     {% include '_delete_modal.html' %}
     <script src="{{ url_for('static', filename='vendor/js/Sortable.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
