--- a/app/static/css/christmas_theme.css
+++ b/app/static/css/christmas_theme.css
@@ -1,4 +1,6 @@
 /* static/css/christmas_theme.css */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 /* --- Base Overrides --- */
 body {
@@ -34,15 +36,26 @@ body {
 }
 
 /* Headings and shiny text */
+/* Main Headings - Festive Font */
 .main-content h1,
-.main-content h2,
-.main-content h3,
 .modal-content h1,
 .nav-title {
     color: #fff;
     text-shadow: 1px 1px 2px #333;
-    font-family: 'Mountains of Christmas', cursive, sans-serif;
-    /* Fallback if font not loaded, but generic cursive helps */
+    font-family: 'Great Vibes', cursive;
+    font-weight: 400;
+    /* Script fonts often don't need distinct bold weights or look better regular */
+    font-size: 3em;
+    /* Script fonts usually need to be larger to be readable */
+}
+
+/* Subheadings - Modern Font */
+.main-content h2,
+.main-content h3 {
+    color: #fff;
+    text-shadow: 1px 1px 2px #333;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
 }
 
 /* Inputs and labels */
@@ -749,8 +762,8 @@ select {
     color: #fff !important;
     /* White */
     text-shadow: none !important;
-    font-size: 2.2rem !important;
-    /* Make titles bigger */
+    font-size: 1.5rem !important;
+    /* Make titles smaller */
 }
 
 /* Labels */
