--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -53,7 +53,7 @@ content %}
         <th class="sortable" data-column-index="0">Name</th>
         <th class="sortable" data-column-index="1">Type</th>
         <th class="sortable" data-column-index="2">Club</th>
-        <th class="sortable" data-column-index="3">Current Path</th>
+        <th class="sortable" data-column-index="3">Participation</th>
         <th class="sortable" data-column-index="4">Credentials</th>
         <th class="sortable" data-column-index="5">Completed Paths</th>
         <th class="sortable" data-column-index="6">Next Project</th>
@@ -72,7 +72,19 @@ content %}
         </td>
         <td>{{ contact.Type }}</td>
         <td>{{ contact.Club }}</td>
-        <td>{% if contact.user %}{{ contact.user.Current_Path }}{% endif %}</td>
+        <td>
+            <div style="display: flex; gap: 5px;">
+                <span title="Attendance" style="background-color: #e2e8f0; padding: 2px 6px; border-radius: 4px; font-size: 0.85em;">
+                    <i class="fas fa-calendar-check" style="color: #4a5568;"></i> {{ contact.attendance_count }}
+                </span>
+                <span title="Roles Taken" style="background-color: #bee3f8; padding: 2px 6px; border-radius: 4px; font-size: 0.85em;">
+                     <i class="fas fa-user-tag" style="color: #2b6cb0;"></i> {{ contact.role_count }}
+                </span>
+                <span title="Awards Won" style="background-color: #feebc8; padding: 2px 6px; border-radius: 4px; font-size: 0.85em;">
+                    <i class="fas fa-trophy" style="color: #c05621;"></i> {{ contact.award_count }}
+                </span>
+            </div>
+        </td>
         <td>{% if contact.user %}{{ contact.user.credentials }}{% endif %}</td>
         <td>{{ contact.Completed_Paths }}</td>
         <td>{% if contact.user %}{{ contact.user.Next_Project }}{% endif %}</td>
